Report Controller & API
